syntax = "proto3";

package buildbarn.configuration.cloud.aws;

import "pkg/proto/configuration/http/http.proto";

option go_package = "github.com/buildbarn/bb-storage/pkg/proto/configuration/cloud/aws";

message StaticCredentials {
  // AWS Access Key ID.
  string access_key_id = 1;

  // AWS Secret Access Key.
  string secret_access_key = 2;
}

message SessionConfiguration {
  // Was 'endpoint'.
  reserved 1;

  // AWS region (e.g., "eu-west-1").
  string region = 2;

  // Was 'disable_ssl'.
  reserved 3;

  // Was 's3_force_path_style'.
  reserved 4;

  // Static credentials to use for all requests. If unspecified, AWS
  // will search the default credential provider chain (e.g.,
  // environment variables, EC2 instance IAM roles).
  StaticCredentials static_credentials = 5;

  // Optional: Options to be used by the HTTP client.
  buildbarn.configuration.http.ClientConfiguration http_client = 6;
}
